--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="Capture"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/captureButton"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -31,9 +32,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="Toggle Shader"
-        app:layout_constraintBottom_toTopOf="@id/seekBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/captureButton" />
+        app:layout_constraintBottom_toTopOf="@id/switchVideoButton"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/switchVideoButton"
@@ -47,12 +47,12 @@
         app:layout_constraintTop_toBottomOf="@id/captureButton" />
 
     <SeekBar
-        android:visibility="gone"
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
